--- a/Console/Console.vcxproj
+++ b/Console/Console.vcxproj
@@ -238,6 +238,9 @@
     <TargetExt>.nex</TargetExt>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnabled>false</VcpkgEnabled>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug 2022|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
